--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -28,10 +28,12 @@ div{
         display: inline-block;
         padding-left: 5%;
         animation: anim3 1s forwards;
-        -webkit-text-stroke-width: 2px;
+        -webkit-text-stroke-width: 1px;
         -webkit-text-fill-color: var(--background-color2);
 
         &>span{
+            -webkit-text-stroke-width: 0;
+            opacity: .3;
             background-color: var(--foreground-color1-alpha);
         }
     }
@@ -69,14 +71,16 @@ div{
             background-color: var(--foreground-color2);
             border: 3px solid var(--foreground-color1);
             opacity: 0;
-            animation: anim4 1s 1.5s forwards;
+            animation: anim4 2s 1.5s forwards;
         }
     }
 
     .letterP{
         z-index: -1;
         opacity: .8;
-        color: var(--foreground-color1);
+        color: var(--background-color1);
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: var(--foreground-color1);
         font-size: larger;
         font-family: sans-serif;
         position: relative;
@@ -133,10 +137,16 @@ div{
     @keyframes anim4 {
         0%{
             width: 0;
+            height: 0;
             opacity: 0;
         }
-        100%{
+        50%{
+            opacity: .8;
+            height: 0;
             width: 100%;
+        }
+        100%{
+            height: 100%;
             opacity: 1;
         }
     }
