--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -50,13 +50,14 @@ nav{
             height: 100%;
             width: 100%;
             color: var(--foreground-color2);
-            opacity: 0.6;
+            opacity: 0.8;
             transition: all .2s ease-in;
+            transform: translate(-4px,-4px);
         }
 
         &:hover{
             &::after{
-                transform: translate(-4px,-4px);
+                transform: translate(0,0);
             }
         }
     }
@@ -128,10 +129,12 @@ nav{
                 font-weight: bolder;
                 text-shadow: 0 0 2px;
                 margin-right: 40px;
-                border-radius: 10px;
+                border-radius: unset;
+                border-top: 2px solid var(--foreground-color1);
+                border-bottom: 2px solid var(--foreground-color1);
                 transform: translateY(-10px);
-                color: var(--background-color1);
-                background-color: var(--foreground-color1);
+                color: var(--foreground-color1);
+                background-color: var(--foreground-color1-alpha);
                 transition: all .4s ease;
                 overflow: hidden;
                 
@@ -141,34 +144,31 @@ nav{
                 &::after{
                     content: '';
                     transition: all .4s linear;
-                    width: 0%;
-                    height: 1%;
+                    width: 100%;
+                    height: 50%;
                     background-color: var(--foreground-color1);
-                    top: -5%;
-                    left: 50%;
-                    border-radius: 10px;
-                    z-index: 1;
-                    overflow: 0;
-                    box-shadow: 0 5px 5px var(--background-color1);
+                    top: 0;
+                    right: 0;
+                    left: unset;
+                    border-radius: unset;
+                    transform: translateX(-100%);
                 }
                 &::before{
                     content: '';
                     transition: all .4s linear;
-                    width: 0%;
-                    height: 1%;
+                    width: 100%;
+                    height: 50%;
                     background-color: var(--foreground-color1);
-                    bottom: -5%;
+                    bottom: 0%;
                     top: unset;
-                    left: 50%;
-                    border-radius: 10px;
-                    z-index: 1;
-                    overflow: 0;
-                    box-shadow: 0 -5px 5px var(--background-color1);
+                    left: 0%;
+                    border-radius: unset;
+                    transform: translateX(100%);
                 }
                 &:hover{
+                    color: var(--background-color1);
                     &::after,&::before{
-                        left: 0%;
-                        width: 100%;
+                        transform: translateX(0);
                     }
                 }
             }
