--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -3,7 +3,7 @@ nav{
     min-height: 60px;
     width: 100%;
     background-color: var(--background-color1);
-    border-bottom: 5px solid var(--foreground-color1);
+    border-bottom: 2px solid var(--foreground-color1);
     color: var(--foreground-color1);
     position: sticky;
     z-index: 2;
@@ -81,10 +81,11 @@ nav{
             cursor: pointer;
             display: inline-block;
             text-align: center;
-            width: 100px;
+            width: 80px;
             padding: 10px;
-            font-size: 20px;
-            font-weight: 100;
+            font-size: 18px;
+            font-weight: lighter;
+            font-family: monospace;
             position: relative;
             margin-left: 10px;
             border-top-left-radius: 10px;
@@ -267,7 +268,7 @@ nav{
     }
 }
 
-@media (width<=1180px){
+@media (width<=1050px){
     nav{
         .navItems{
             display: none;
