--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -109,7 +109,9 @@ div{
         z-index: -3;
         position: absolute;
         width: 50%;
-        transform: translateX(40vw) translateY(-50vh) rotateZ(45deg);
+        transform: translateX(40vw) translateY(-50vh) rotateZ(45deg) scale(1.5) translateX(-100vw) translateY(-100vw);
+        animation: anim5 3s forwards;
+        animation-timing-function: ease;
     }
 
     @keyframes anim2 {
@@ -147,6 +149,12 @@ div{
         100%{
             height: 100%;
             opacity: 1;
+        }
+    }
+
+    @keyframes anim5 {
+        100%{
+            transform: translateX(40vw) translateY(-50vh) rotateZ(45deg) scale(1.5) translateX(0) translateY(0);
         }
     }
 }
