--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -12,7 +12,8 @@
     <h1>My Projects</h1>
     <div class="projectsContainer">
         <div class="projectCard" *ngFor="let project of projects">
-            <a href="{{ project.link }}">
+            <img src="{{ project.image }}" alt="background"/>
+            <a href="{{ project.link }}" target="_blank">
                 <h1 id="{{ project.description }}">{{ project.name | titlecase }}</h1>
                 <p>Tools : {{ project.tools }}</p>
             </a>
