fixed an issue in displaying images in projects section

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -44,7 +44,7 @@
                 height: 100%;
                 opacity: 0;
                 transition: all 1.5s ease;
-                object-fit: fill;
+                object-fit:cover;
             }
             
 
