--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -77,22 +77,19 @@ div{
     .letterP{
         z-index: -1;
         opacity: .8;
-        color: var(--background-color1);
+        color: var(--foreground-color1);
         -webkit-text-stroke-width: 1px;
-        -webkit-text-stroke-color: var(--foreground-color1);
+        -webkit-text-stroke-color: var(--background-color1);
         font-size: larger;
         font-family: sans-serif;
         position: relative;
         display: inline-block;
-        transform: translateX(70vw) translateY(-20%) rotateZ(45deg) translateY(-10%) scale(4) translateX(-20px) translateY(-20px);
+        transform: translateX(80vw) translateY(-20%) rotateZ(30deg) translateY(-10%) scale(4) translateX(-20px) translateY(-20px);
         animation: anim1 10s infinite,anim2 3s forwards;
 
         @keyframes anim1 {
-            0%{
-                transform: translateX(70vw) translateY(-20%) rotateZ(45deg) translateY(-10%) scale(4) translateX(-20px) translateY(-20px);
-            }
             50%{
-                transform: translateX(70vw) translateY(-20%) rotateZ(45deg) translateY(-10%) scale(4) translateX(-40px) translateY(-40px);
+                transform: translateX(80vw) translateY(-20%) rotateZ(30deg) translateY(-10%) scale(4) translateX(-30px) translateY(-40px);
             }
         }
 
@@ -103,15 +100,6 @@ div{
             top: 5%;
             left: 5%;
         }
-    }
-
-    img{
-        z-index: -3;
-        position: absolute;
-        width: 50%;
-        transform: translateX(40vw) translateY(-50vh) rotateZ(45deg) scale(1.5) translateX(-100vw) translateY(-100vw);
-        animation: anim5 3s forwards;
-        animation-timing-function: ease;
     }
 
     @keyframes anim2 {
@@ -151,20 +139,11 @@ div{
             opacity: 1;
         }
     }
-
-    @keyframes anim5 {
-        100%{
-            transform: translateX(40vw) translateY(-50vh) rotateZ(45deg) scale(1.5) translateX(0) translateY(0);
-        }
-    }
 }
 
 @media (max-width: 850px){
     div{
         .letterP{
-            display: none;
-        }
-        img{
             display: none;
         }
         .title{
