--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,28 +8,31 @@ div{
     text-shadow: 0 0 2px var(--background-color2);
     position: relative;
     overflow: hidden;
+    background: url("/assets/deskSetUp.avif") no-repeat center center fixed;
+    background-size: cover;
 
-    &::after{
-        content: '';
-        z-index: -1;
-        position: absolute;
-        width: max( 60% , 100vh);
-        height: 110%;
-        top: -10%;
-        left: -1%;
-        background-color: var(--background-color2);
-        transform: rotateZ(10deg);
-    }
+    // &::after{
+    //     content: '';
+    //     z-index: -1;
+    //     position: absolute;
+    //     width: max( 60% , 100vh);
+    //     height: 110%;
+    //     top: -10%;
+    //     left: -1%;
+    //     background-color: var(--background-color2);
+    //     transform: rotateZ(10deg);
+    // }
 
     .title{
+        margin-top: min( max( 10% , 80px ) , 100px );
         font-weight: bold;
         width: 60%;
-        margin-top: max( 4% , 24px );
         display: inline-block;
         padding-left: 5%;
         animation: anim3 1s forwards;
         -webkit-text-stroke-width: 1px;
         -webkit-text-fill-color: var(--background-color2);
+        -webkit-text-fill-color: #222;
 
         &>span{
             -webkit-text-stroke-width: 0;
@@ -38,8 +41,8 @@ div{
     }
 
     .profile{
-        background-color: var(--foreground-color1);
-        border: 3px solid var(--foreground-color2);
+        background-color: var(--foreground-color2);
+        border: 3px solid var(--foreground-color1);
         color: var(--background-color1);
         margin-top: 5%;
         display: block;
@@ -67,8 +70,8 @@ div{
             height: 100%;
             top: -9%;
             left: -7%;
-            background-color: var(--foreground-color2);
-            border: 3px solid var(--foreground-color1);
+            background-color: var(--foreground-color1);
+            border: 3px solid var(--foreground-color2);
             opacity: 0;
             animation: anim4 2s 1.5s forwards;
         }
@@ -76,8 +79,7 @@ div{
 
     .letterP{
         z-index: -1;
-        opacity: .8;
-        color: var(--foreground-color1);
+        color: var(--foreground-color2);
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: var(--background-color1);
         font-size: larger;
@@ -107,7 +109,7 @@ div{
             opacity: 0;
         }
         100%{
-            opacity: 1;
+            opacity: .5;
         }
         
     }
@@ -119,7 +121,7 @@ div{
         }
         100%{
             transform: translateX(0);
-            opacity: 1;
+            opacity: .7;
         }
     }
 
@@ -147,6 +149,7 @@ div{
             display: none;
         }
         .title{
+            font-size: 70px;
             width: 90%;
         }
     }
