--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,10 +5,11 @@
     
     --foreground-color1: #fcfcfc;
     --foreground-color2: #00e5ff;
+    --foreground-color2: #33827A;
 
     --foreground-color1-alpha: #fcfcfc70;
     --foreground-color1-alpha2: #fcfcfc0f;
-    --foreground-color2-alpha: #00e5ff70;
+    --foreground-color2-alpha: #33827A70;
     
     /////////////////////////////////////////////////////////////
     //option2 Dark Mode
