--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -5,10 +5,10 @@ nav{
     background-color: var(--background-color1);
     border-bottom: 2px solid var(--foreground-color1);
     color: var(--foreground-color1);
-    position: fixed;
+    position: sticky;
     z-index: 2;
     top: 0;
-    left: 0;
+    overflow: hidden;
     animation: anim1 1s forwards;
     opacity: .9;
 
