--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -57,7 +57,7 @@
                 }
 
                 h1::before{
-                    transform: translateX(0%);
+                    transform: translateX(0);
                 }
                 h1::after{
                     opacity: 1;
@@ -82,7 +82,7 @@
                     height: 40px;
                     width: 100px;
                     color: var(--foreground-color1);
-                    background-color: var(--background-color2);
+                    background-color: transparent;
                     cursor: pointer;
                     border: 1px solid var(--foreground-color1);
                     opacity: 0;
@@ -120,7 +120,7 @@
                     height: 3px;
                     background-color: var(--foreground-color1);
                     transform: translateX(-100%);
-                    transition: transform .5s ease-in;
+                    transition: transform .5s .5s ease-in;
                 }
 
                 &::after{
