--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,8 +8,19 @@ div{
     text-shadow: 0 0 2px var(--background-color2);
     position: relative;
     overflow: hidden;
-    background: url("/assets/deskSetUp.avif") no-repeat center center fixed;
+    background: url("/assets/deskSetUp.jpg") no-repeat center center fixed;
     background-size: cover;
+
+    .overlay{
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        background-color: var(--background-color2);
+        transition: all 1s ease;
+    }
 
     // &::after{
     //     content: '';
@@ -25,17 +36,18 @@ div{
 
     .title{
         margin-top: min( max( 10% , 80px ) , 100px );
-        font-weight: bold;
+        font-weight: 600;
         width: 60%;
         display: inline-block;
         padding-left: 5%;
         animation: anim3 1s forwards;
+        color: transparent;
         -webkit-text-stroke-width: 1px;
-        -webkit-text-fill-color: var(--background-color2);
-        -webkit-text-fill-color: #222;
+        -webkit-text-stroke-color: var(--foreground-color1);
 
         &>span{
             -webkit-text-stroke-width: 0;
+            color: transparent;
             background-color: var(--foreground-color1-alpha);
         }
     }
@@ -78,7 +90,7 @@ div{
     }
 
     .letterP{
-        z-index: -1;
+        z-index: 1;
         color: var(--foreground-color2);
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: var(--background-color1);
@@ -121,7 +133,7 @@ div{
         }
         100%{
             transform: translateX(0);
-            opacity: .7;
+            opacity: 1;
         }
     }
 
