--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,14 +1,5 @@
 <div class="projectsPage">
-    
-    <div class="front-stars">
-        <div *ngFor="let number of numbers" class="type{{Rand()}}" [ngStyle]="{'left.vw': Random() ,'bottom.px': RandomNeg()}"></div>
-    </div>
-    <div class="middle-stars">
-        <div *ngFor="let number of numbers" class="type{{Rand()}}" [ngStyle]="{'left.vw': Random() ,'bottom.px': RandomNeg()}"></div>
-    </div>
-    <div class="far-stars">
-        <div *ngFor="let number of numbers" class="type{{Rand()}}" [ngStyle]="{'left.vw': Random() ,'bottom.px': RandomNeg()}"></div>
-    </div>
+    <img class="back" src="assets/back.png" alt="back photo"/>
     <h1>My Projects</h1>
     <div class="projectsContainer">
         <div class="projectCard" *ngFor="let project of projects">
