--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -150,55 +150,12 @@
     }
 
     
-        
-        .front-stars,.middle-stars,.far-stars{
-            width: 100%;
-            height: 100rem;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-
-            &>div{
-                box-shadow: 0 0 10px var(--foreground-color1);
-                position: absolute;
-                border-radius: 10px;
-                background-color: var(--foreground-color1);
-            }
-            @keyframes anim2 {
-                90%{
-                    opacity: 0.5;
-                }
-                100%{
-                    transform:translateY(-250vh);
-                    opacity: 0;
-                }
-            }
-
-            .type1{
-                animation: 15s ease infinite anim2;
-            }
-            .type2{
-                animation-delay: 25s;
-                animation: 20s ease-in infinite anim2;
-            }
-            .type3{
-                animation-delay: 10s;
-                animation: 30s ease-in infinite anim2;
-            }
-        }
-        .front-stars>div{
-            width: 4px;
-            height: 4px;
-            opacity: 0.8;
-        }
-        .middle-stars>div{
-            width: 3px;
-            height: 3px;
-            opacity: .4;
-        }
-        .far-stars>div{
-            width: 2px;
-            height: 2px;
-            opacity: .6;
-        }
+    .back{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: .2;
+    }
 }
